2007-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs: Add ctor references too. Fixes bug
	#82204.

	* Gui/CSharpTextEditorExtension.cs: Handle indent-region by
	resetting state so that we don't get confused.

2007-07-27  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpFormattingStrategy.cs (FormatLine):
	Fixed to be a no-op.

2007-07-25  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #82179.

	* FormattingStrategy/CSharpIndentEngineStack.cs (Push): Added a
	second Push() method allowing the caller to force a particular
	indent.

	* FormattingStrategy/CSharpIndentEngine.cs (PushOpenBrace): Trim
	the indent level as we pop FoldedStatements and use
	stack.PeekKeyword(0) instead of stack.PeekKeyword(1).
	(PushFoldedStatement): We no longer stop pushing folded statements
	for any reason, we simply push a folded statement with a set
	indent in those cases (needed for keeping proper track of
	keywords).

2007-07-24  Jeffrey Stedfast  <fejj@novell.com>

	Part of the fix for bug #82114.

	* Parser/CodeGenerator.cs: Override a few more Visit() methods so
	that we pick up class references in CastExpressions,
	VariableDeclarations and ObjectCreateExpressions.
	(AddUniqueReference): New method to add only unique references
	to the collection.

2007-07-23  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Write the compiler command used to
	  compile the project to the log.

2007-07-18  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpIndentEngine.cs: A few fixes, including
	one for bug #82055.

	* Gui/CSharpTextEditorExtension.cs (IsInUsing): Simplified.
	(GetPreviousToken): Fixed bug #82131.

2007-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Fixed a bug caused
	when using any key other than Enter to auto-complete (e.g. using a
	'(' or something).

2007-07-17  Lluis Sanchez Gual <lluis@novell.com> 
