@@ -1,31 +1,0 @@
-<?xml version="1.0"?>
-<Template Originator="Christoph Wille" Language="C#" Created="6/13/2001" LastModified="6/13/2001">
-	
-	<TemplateConfiguration>
-		<_Name>Web Service</_Name>
-		<Icon>res:C#.File.WebFile</Icon>
-		<Category>C#</Category>
-		<LanguageName>C#</LanguageName>
-		<_Description>Creates a C# Web Service.</_Description>
-	</TemplateConfiguration>
-	
-	<TemplateFiles>
-		<File DefaultExtension=".asmx" DefaultName="WebService">
-
-<![CDATA[<%@ WebService Language="C#" Class="YourClassname" %>
-// created on ${Date} at ${Time}
-using System;
-using System.Web.Services;
-
-public class YourClassname : WebService
-{
-	// [WebMethod]
-	// public string SampleMethod() { return "Hello World"; }
-}
-]]>
-		</File>
-	</TemplateFiles>
-	
-	<FileOptions/>
-	
-</Template>
